--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sharp": "^0.25.1",
-    "uuid": "^7.0.2"
+    "uuid": "^7.0.2",
+    "xss-clean": "^0.1.1"
   }
 }
